<resources>
    <string name="app_name">Pizza comparator</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="fragment_compare_label">Fragment compare</string>
    <string name="fragment_about_label">Fragment compare</string>
    <string name="fragment_settings_label">Fragment compare</string>
    <string name="fragment_help_label">Fragment compare</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bar_title_comparator">Pizza comparator</string>
    <string name="bar_title_settings">Settings</string>
    <string name="bar_title_help">Help</string>
    <string name="bar_title_about">About</string>
    <string name="adaptive_banner_ad_unit_id">ca-app-pub-4489491955068803/7843062002</string>
    <string name="popmenu_rateapp">Rate this app</string>
    <string name="popmenu_update">Update</string>
    <string name="popmenu_settings">Settings</string>
    <string name="popmenu_update_info">No update yet</string>
    <string name="popmenu_help">Help &amp; Feedback</string>
    <string name="popmenu_about">About</string>
    <string name="tooltip_back">Back</string>
    <string name="tooltip_reset">Reset</string>
    <string name="tooltip_help">Help</string>
    <string name="menu_1">Calculate the price</string>
    <string name="menu_2">Create order list </string>
    <string name="previous">Previous</string>
        <string name="add_group">Add group</string>
        <string name="add_pizza">Add pizza</string>
        <string name="swipe">Swipe item to delete group</string>
        <string name="units_diameter_cm">[cm]</string>
        <string name="units_diameter_inch">[in]</string>
        <string name="item_group_diameter">diameter</string>
        <string name="item_group_price">price</string>
        <string name="item_group_amount">amount</string>
        <string name="item_group_total_area">Total area:</string>
        <string name="item_group_total_cost">Total cost:</string>
    <string name="item_group_total_area2">Area:</string>
    <string name="item_group_total_cost2">Cost:</string>
        <string name="item_group_can_buy1">For one\u0020</string>
        <string name="item_group_can_buy2">\u0020you can buy:</string>
        <string name="item_group_can_buy3">\u0020buy:</string>
        <string name="ig_text_pizza_add">add another Pizza to group</string>
        <string name="ig_text_pizza_add_another">add Pizza to compare</string>
        <string name="ig_text_about_more_expensive">More Pizza but more expensive than the best offer</string>
        <string name="ig_text_about_less_cheaper">Less Pizza but cheaper than the best offer</string>
        <string name="ig_text_about_less_best">Less Pizza but this is the best offer</string>
        <string name="ig_text_about_more_same">More Pizza with the same profitability</string>
        <string name="ig_text_about_best_offer">The most profitable offer!</string>
        <string name="ig_text_about_none"> </string>
        <string name="toast_max_group_number">Max number of groups</string>
        <string name="toast_UNABLE_TO_ADD_PIZZA_TEXT">Values cannot be zero</string>
        <string name="pop_yn_question">Are you sure you want to delete this group?</string>
        <string name="pop_yn_question_2">Are you sure you want to reset view?</string>
        <string name="pop_yn_yes">Yes</string>
        <string name="pop_yn_no">Cancel</string>
        <string name="pop_add_title_add">Add pizza</string>
        <string name="pop_add_title_edit">Edit pizza</string>
        <string name="pop_add_enter_diameter">Enter diameter</string>
        <string name="pop_add_enter_price">Enter price</string>
        <string name="pop_add_enter_amount">Amount</string>
        <string name="pop_add_button_text_add">Add</string>
        <string name="pop_add_button_text_edit">Edit</string>
        <string name="pop_help_text_1">Add Pizzas to different groups</string>
        <string name="pop_help_text_2">You can edit or delete Pizza by click on its item</string>
        <string name="pop_help_text_3">Clear view using the button: </string>
    <string name="swipe_fragment">Swipe to return </string>
    <string name="rate_text">How do you rate an app?</string>
    <string name="rate_text_bad">Thanks for your opinion!
    \nWould you like send me more details? </string>
    <string name="sett_layout_1_title">Unit</string>
    <string name="sett_layout_1_button_1_text">cm</string>
    <string name="sett_layout_1_button_2_text">inch</string>
    <string name="sett_layout_2_title">Currency</string>
    <string name="sett_layout_2_button_1_text">$</string>
    <string name="help_title">Write feedback</string>
    <string name="help_text">
        \tIf you want to report bug, give some sugestions or share your opinion, please write to me. I will be grateful for your feedback. </string>
    <string name="about_app_title">About App</string>
    <string name="about_app_text">\t Pizza comparator - compare different pizzas and choose the best offer!</string>
    <string name="about_me_title">About Me</string>
    <string name="about_me_text">\tI\'m a beginner individual, android developer. </string>
    <string name="about_policy_title">Privacy Policy</string>
    <string name="about_policy_text">\tBinarius built the Pizza comparator app as an Ad Supported app. This SERVICE is provided by Binarius at no cost and is intended for use as is.
        \n\tThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
        \nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
        \n\tThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Pizza comparator unless otherwise defined in this Privacy Policy.
        \n\t<string name="info_1"><b>Information Collection and Use</b></string>
    <string name="about_terms_title">Terms &amp; Conditions</string>
    <string name="about_terms_text">
    \n\tBy downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to binariusO1.
    \n\tbinariusO1 is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.
    \n\tThe BMI calculator app stores and processes personal data that you have provided to us, in order to provide my Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the BMI calculator app won’t work properly or at all.
    \n\tThe app does use third party services that declare their own Terms and Conditions.
    \n\tLink to Terms and Conditions of third party service providers used by the app
        \n\tGoogle Play Services https://policies.google.com/terms
        \n\tAdMob https://developers.google.com/admob/terms
        \n\tGoogle Analytics for Firebase https://firebase.google.com/terms/analytics
        \n\tFirebase Crashlytics  https://firebase.google.com/terms/crashlytics
    \n\tYou should be aware that there are certain things that binariusO1 will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but binariusO1 cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.
    \n\tIf you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.
    \n\tAlong the same lines, binariusO1 cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, binariusO1 cannot accept responsibility.
    \n\tWith respect to binariusO1’s responsibility for your use of the app, when you’re using the app, it\'s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. binariusO1 accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.
    \n\tAt some point, we may wish to update the app. The app is currently available on Android – the requirements for system(and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. binariusO1 does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.
    \n\t<string name="info_11"><b>Changes to This Terms and Conditions</b></string>
    <string name="log_title">Log information</string>
    <string name="log_title_0_90">version 0.90</string>
    <string name="log_text_0_90">Alfa test release</string>
    <string name="version">version 0.9 Alfa</string>
    <string name="more">more</string>
    <string name="vote_angry">vote angry</string>
    <string name="vote_sad">vote sad</string>
    <string name="vote_neutral">vot neutral</string>
    <string name="vote_happy">vote happy</string>
    <string name="vote_very_happy">vote very happy</string>
</resources>