<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorSecondary"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.binario.pizzacomparator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:orientation="vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/field_background"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/about_app_title" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/about_app_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:orientation="vertical"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/field_background"
                    android:layout_gravity="center_vertical"
                    >
                    <LinearLayout
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="60dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/about_me_title" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginBottom="0dp"
                            android:layout_marginEnd="15dp"
                            android:layout_height="wrap_content"
                            android:text="@string/about_me_text" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginEnd="25dp"
                            android:paddingBottom="10dp"
                            android:layout_marginTop="0dp"
                            android:layout_gravity="end"
                            android:text="binariusO1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_centerInParent="true"
                        android:layout_alignParentEnd="true"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:foregroundGravity="center_vertical"
                        android:orientation="vertical">
                        <Button
                            android:contentDescription="@string/more"
                            android:id="@+id/avatar_button"
                            android:layout_marginEnd="10dp"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/avatar_background" />
                    </LinearLayout>
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:orientation="vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/popmenu_background"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/about_policy_title" />
                    <TextView
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/about_policy_text" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:autoLink="all"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/about_terms_title" />
                    <TextView
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/about_terms_text" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:orientation="vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/popup_background"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/log_title" />
                    <TextView
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/log_title_0_90" />
                    <TextView
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_height="wrap_content"
                        android:text="@string/log_text_0_90" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>

</RelativeLayout>