<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/AppTheme"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ActionBar.Solid.Example">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ActionBar.Solid.Example"
            app:popupTheme="@style/PopupMenu.Custom" >
            <ImageButton
                android:id="@+id/button_appbar_back"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="start"
                android:layout_marginStart="0dp"
                android:background="@drawable/ripple"
                android:src="@drawable/ic_arrow_back_24dp"
                android:foregroundGravity="right"
                android:scaleType="centerInside"
                android:duplicateParentState="false"
                android:visibility="visible"
                android:tooltipText="@string/tooltip_back"/>
            <ImageButton
                android:id="@+id/button_reset"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="start"
                android:layout_marginStart="0dp"
                android:background="@drawable/ripple"
                android:src="@drawable/ic_refresh"
                android:foregroundGravity="right"
                android:scaleType="centerInside"
                android:duplicateParentState="false"
                android:visibility="visible"
                android:tooltipText="@string/tooltip_reset"/>
            <ImageButton
                android:id="@+id/button_help"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="end"
                android:layout_marginStart="0dp"
                android:background="@drawable/ripple"
                android:src="@drawable/ic_help_outline"
                android:foregroundGravity="right"
                android:scaleType="centerInside"
                android:duplicateParentState="false"
                android:visibility="visible"
                android:tooltipText="@string/tooltip_help"/>
            <TextView
                android:id="@+id/action_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#FFFFFF"
                android:text="@string/app_name" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>