<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:maxWidth="280dp"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:onClick="dismiss_help"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        android:gravity="center_horizontal"
        android:layout_width="280dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="1dp"/>
            <TextView
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop_help_text_1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="1dp"/>
        </LinearLayout>
        <ImageView
            android:padding="10dp"
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help"
            android:adjustViewBounds="true"
            />
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>
            <TextView
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop_help_text_2"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <TextView
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop_help_text_3"/>
            <ImageButton
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_refresh"
                android:background="@color/colorAccent"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>